--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 requires-python = ">=3.13,<4.0"
 dependencies = [
     "nfcpy (>=1.0.4,<2.0.0)",
+    "asn1 (>=3.1.0,<4.0.0)",
 ]
 
 [tool.poetry]
