--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requires-python = ">=3.13,<4.0"
 dependencies = [
     "nfcpy (>=1.0.4,<2.0.0)",
     "asn1 (>=3.1.0,<4.0.0)",
+    "asn1crypto (>=1.5.1,<2.0.0)",
 ]
 
 [tool.poetry]
